# issue-creator-pj

./: .clinerules  .gitignore  create_fastapi_project.sh
issue-draft-creator/: issues.json  main.py  pyproject.toml  repositories.json  requirements.txt
issue-draft-creator/static/: directory.txt  function.js
issue-draft-creator/static/css/: github-preview.css  main.css  style.css  styles.css
issue-draft-creator/static/js/: app.js  script.js
issue-draft-creator/templates/: base.html  create.html  drafts.html  error.html  history.html  index.html  layout.html  preview.html  settings.html
issue-draft-creator/templates/partials/: error_message.html  issue_preview.html  repo_list.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
product-documents/: AIPrompts.md  Architecture.md  DevelopmentStep.md  Endpoints.md  PRD.md  Page.md  Usecase.md  folder.md  gitRules.md
